# dspec

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
Orchestrator/app/: server.py
Skills/intune-diag-review/: SKILL.md
Skills/intune-diag-review/references/: data-collected.md  report-template.md
Skills/intune-diag-review/scripts/: extract-diag.sh  scan-errors.sh
Skills/medical-anki-deck/: SKILL.md
Skills/medical-anki-deck/references/: card-writing.md
Skills/medical-anki-deck/scripts/: anki_builder.py  validate_apkg.py
commands/: spec-eval.md  spec-stats.md  spec-watch.md  spec.md
eval/: README.md  RESULTS.md  manifest.json
eval/tasks/: 01-gitignore-rust.md  02-rustdoc-comments.md  03-json-to-toml.md  04-conventional-commit.md  05-systemd-unit.md  06-summarize-readme.md  07-bash-one-liner.md  08-design-sync-cli.md  09-sqlite-vs-jsonl.md  10-proptest-gate-decide.md  11-cron-first-monday.md  12-iso-week-date.md  13-safe-bulk-rename.md  14-sql-not-in-null.md  15-semver-regex.md  16-concurrent-telemetry-design.md
instructions/: AGENTS.md  CLAUDE.md
server/: Cargo.toml
server/src/: claude_cli.rs  config.rs  error.rs  gate.rs  live.rs  main.rs  prompts.rs  server.rs  stream.rs  telemetry.rs
server/tests/fixtures/: mock_claude.sh
