[package]
name = "dspec-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.8", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
sha2 = "0.10"
dirs = "6"
anyhow = "1"